--- a/Leifer_Mendez/proyectos/portafolio2/package.json
+++ b/Leifer_Mendez/proyectos/portafolio2/package.json
@@ -19,9 +19,11 @@
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^12.1.4",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
+    "t-writer.js": "^1.0.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
